# cornucopia

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  zensical.toml
.conda/: meta.yaml
.github/actions/conda/: action.yaml
.github/actions/test/: action.yaml
.github/workflows/: doc.yaml  publish-conda-from-pypi.yaml  publish-conda.yaml  publish-on-release.yaml  publish-pypi.yaml  test-and-publish.yaml  test-matrix.yaml  test-on-push.yaml  test.yaml
cornucopia/: #base.py#  __init__.py  _version.py  base.py  baseutils.py  contrast.py  ctx.py  fov.py  geometric.py  intensity.py  io.py  kspace.py  labels.py  noise.py  psf.py  qmri.py  random.py  special.py  synth.py  typing.py
cornucopia/functional/: __init__.py  _utils.py  fov.py  geometric.py  intensity.py  noise.py  psf.py  random.py  spline.py
cornucopia/tests/: test_backward_geometric.py  test_backward_intensity.py  test_backward_kspace.py  test_backward_noise.py  test_backward_psf.py  test_backward_qmri.py  test_backward_random.py  test_backward_synth.py  test_base.py  test_geometric.py  test_intensity.py  test_random.py  test_run_contrast.py  test_run_fov.py  test_run_geometric.py  test_run_intensity.py  test_run_kspace.py  test_run_labels.py  test_run_noise.py  test_run_psf.py  test_run_qmri.py  test_run_synth.py
cornucopia/utils/: __init__.py  b0.py  bounds.py  compat.py  conv.py  distributions.py  gmm.py  indexing.py  io.py  jit.py  kernels.py  morpho.py  mrf.py  padding.py  patch.py  pool.py  py.py  smart_inplace.py  smart_math.py  version.py  warps.py
docs/: conf.py  index.md  index.rst  install.md  requirements.txt  start.md
docs/api/: base.md  contrast.md  ctx.md  fov.md  geometric.md  index.md  intensity.md  io.md  kspace.md  labels.md  noise.md  overview.md  psf.md  qmri.md  random.md  special.md  synth.md
docs/examples/: b0.ipynb  b0.md  benchmark.md  coils.ipynb  coils.md  contrast.ipynb  contrast.md  fov.ipynb  fov.md  functional.ipynb  geom.ipynb  geom.md  index.md  labels.ipynb  labels.md  motion.ipynb  motion.md  noise.ipynb  noise.md  overview.md  qmri.ipynb  qmri.md  synth.ipynb  synth.md
docs/extensions/: myst_docstring.py
docs/javascripts/: mathjax.js
docs/scripts/: nb2md.py
docs/stylesheets/: extra.css
examples/: benchmark.ipynb  coils.ipynb  contrast.ipynb  motion.ipynb  synth.ipynb
