[project]
name = "cornucopia"
authors = [{name = "Yael Balbastre", email = "yael.balbastre@gmail.com"}]
description = "An abundance of augmentation layers"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dynamic = ["version"]

requires-python = ">= 3.7"
dependencies = [
    "torch >= 1.8",             # torch.fft
    "numpy >= 1.20",            # numpy.typing
    "torch-interpol >= 0.3",    # avoids torch.jit.script deprecation warning
    "torch-distmap >= 0.3",     # avoids torch.jit.script deprecation warning
    "typing_extensions >= 4.7", # last version that supports python 3.7
    "nibabel",
]

[project.urls]
Homepage = "https://github.com/balbasty/cornucopia"
Issues = "https://github.com/balbasty/cornucopia/issues"

[build-system]
requires = [
    "setuptools >= 59.0",
    "wheel",
    "versioningit >= 1.0",
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.format]
# Same format as versioneer
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "cornucopia/_version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["cornucopia/tests"]
