[metadata]
name = cornucopia
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = An abundance of augmentation layers
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/cornucopia

[options]
python_requires = >= 3.6
install_requires =
    torch >= 1.8
    numpy
    nibabel
    torch-interpol
dependency_links = https://github.com/balbasty/torch-interpol

# dependencies to get rid of:
# - monai:          we only use RandAffine, which can be replaced by ours
# - torchvision:    we only use VisionDataset. We could use the vanilla
#                   torch Dataset.
